params: Add `extra_parameters: dict` attribute (disabled on sync GET queries)
