# openapi.yml
@@ -115,6 +115,12 @@ components:
     Img2ImgParams:
       additionalProperties: false
       properties:
+        extra_parameters:
+          default: {}
+          description: Extra parameters to pass to the pipeline. See the documentation
+            of the pipeline for more information.
+          title: Extra Parameters
+          type: object
         guidance:
           default: 7.5
           description: 'Higher guidance encourages generation closely linked to `prompt`,
@@ -208,6 +214,12 @@ components:
     InpaintParams:
       additionalProperties: false
       properties:
+        extra_parameters:
+          default: {}
+          description: Extra parameters to pass to the pipeline. See the documentation
+            of the pipeline for more information.
+          title: Extra Parameters
+          type: object
         guidance:
           default: 7.5
           description: 'Higher guidance encourages generation closely linked to `prompt`,
@@ -290,6 +302,89 @@ components:
       - mask
       title: InpaintParams
       type: object
+    Params:
+      additionalProperties: false
+      properties:
+        extra_parameters:
+          default: {}
+          description: Extra parameters to pass to the pipeline. See the documentation
+            of the pipeline for more information.
+          title: Extra Parameters
+          type: object
+        guidance:
+          default: 7.5
+          description: 'Higher guidance encourages generation closely linked to `prompt`,
+            usually at the expense of lower image quality. Try using more steps to
+            improve image quality when using high guidance. Guidance is disabled by
+            setting `guidance` to `1`. `guidance` is defined as `w` of equation 2.
+            of [ImagenPaper](https://arxiv.org/pdf/2205.11487.pdf). See also: [Classifier-Free
+            Diffusion Guidance](https://arxiv.org/abs/2207.12598).'
+          minimum: 1.0
+          title: Guidance
+          type: number
+        model:
+          default: CompVis/stable-diffusion-v1-4
+          description: 'The model to use for image generation. One of: the *repo id*
+            of a pretrained pipeline hosted on huggingface (e.g. ''CompVis/stable-diffusion-v1-4''),
+            *a path* to a *directory* containing pipeline weights, (e.g., ''./my_model_directory/''). '
+          title: Model
+          type: string
+        negative_prompt:
+          description: The prompt to dissuade image generation. Ignored when not using
+            guidance (i.e., if `guidance` is `1`).
+          title: Negative Prompt
+          type: string
+        pipeline:
+          description: 'The pipeline to use for the task. One of: the *file name*
+            of a community pipeline hosted on GitHub under https://github.com/huggingface/diffusers/tree/main/examples/community
+            (e.g., ''clip_guided_stable_diffusion''), *a path* to a *directory* containing
+            a file called `pipeline.py` (e.g., ''./my_pipeline_directory/''.), or
+            the *repo id* of a custom pipeline hosted on huggingface. See [Loading
+            and Creating Custom Pipelines](https://huggingface.co/docs/diffusers/main/en/using-diffusers/custom_pipelines). '
+          title: Pipeline
+          type: string
+        pipeline_method:
+          description: The method to call on the pipeline. If unspecified, the pipeline
+            itself will be called.
+          title: Pipeline Method
+          type: string
+        prompt:
+          description: The prompt to guide image generation.
+          title: Prompt
+          type: string
+        safety_filter:
+          default: true
+          description: Ensure that you abide by the conditions of the Stable Diffusion
+            license and do not expose unfiltered results in services or applications
+            open to the public. For more information, please see https://github.com/huggingface/diffusers/pull/254
+          title: Safety Filter
+          type: boolean
+        scheduler:
+          default: plms
+          description: The scheduler to use for image generation. Currently only 'plms',
+            'ddim', and 'k-lms', are supported.
+          enum:
+          - plms
+          - ddim
+          - k-lms
+          title: Scheduler
+          type: string
+        seed:
+          description: The randomness seed to use for image generation. If not set,
+            a random seed is used.
+          title: Seed
+          type: integer
+        steps:
+          default: 20
+          description: The number of denoising steps. More denoising steps usually
+            lead to a higher quality image at the expense of slower inference.
+          title: Steps
+          type: integer
+      required:
+      - pipeline
+      - prompt
+      title: Params
+      type: object
     PendingEvent:
       properties:
         event_type:
@@ -323,6 +418,12 @@ components:
     Txt2ImgParams:
       additionalProperties: false
       properties:
+        extra_parameters:
+          default: {}
+          description: Extra parameters to pass to the pipeline. See the documentation
+            of the pipeline for more information.
+          title: Extra Parameters
+          type: object
         guidance:
           default: 7.5
           description: 'Higher guidance encourages generation closely linked to `prompt`,
@@ -804,6 +905,7 @@ paths:
               - $ref: '#/components/schemas/Txt2ImgParams'
               - $ref: '#/components/schemas/Img2ImgParams'
               - $ref: '#/components/schemas/InpaintParams'
+              - $ref: '#/components/schemas/Params'
               title: Parameters
         required: true
       responses:
